# stub/swagger_server/models/__init__.py
@@ -3,14 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.average_dust_api import AverageDustApi
 from swagger_server.models.average_mq2 import AverageMQ2
 from swagger_server.models.average_mq9 import AverageMQ9
+from swagger_server.models.average_pmapi import AveragePMAPI
 from swagger_server.models.average_pms7 import AveragePMS7
-from swagger_server.models.average_temp_api import AverageTempApi
-from swagger_server.models.dust_api import DustApi
 from swagger_server.models.height import Height
-from swagger_server.models.mq2 import MQ2
-from swagger_server.models.mq9 import MQ9
+from swagger_server.models.pmapi import PMAPI
 from swagger_server.models.pms7 import PMS7
-from swagger_server.models.temp_api import TempApi
