# stub/swagger_server/models/average_pmapi.py
@@ -9,21 +9,21 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class DustApi(Model):
+class AveragePMAPI(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, height_id: int=None, name: str=None, pm10: float=None, pm25: float=None):  # noqa: E501
-        """DustApi - a model defined in Swagger
+        """AveragePMAPI - a model defined in Swagger
 
-        :param height_id: The height_id of this DustApi.  # noqa: E501
+        :param height_id: The height_id of this AveragePMAPI.  # noqa: E501
         :type height_id: int
-        :param name: The name of this DustApi.  # noqa: E501
+        :param name: The name of this AveragePMAPI.  # noqa: E501
         :type name: str
-        :param pm10: The pm10 of this DustApi.  # noqa: E501
+        :param pm10: The pm10 of this AveragePMAPI.  # noqa: E501
         :type pm10: float
-        :param pm25: The pm25 of this DustApi.  # noqa: E501
+        :param pm25: The pm25 of this AveragePMAPI.  # noqa: E501
         :type pm25: float
         """
         self.swagger_types = {
@@ -45,32 +45,32 @@ class DustApi(Model):
         self._pm25 = pm25
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DustApi':
+    def from_dict(cls, dikt) -> 'AveragePMAPI':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The DustApi of this DustApi.  # noqa: E501
-        :rtype: DustApi
+        :return: The AveragePMAPI of this AveragePMAPI.  # noqa: E501
+        :rtype: AveragePMAPI
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def height_id(self) -> int:
-        """Gets the height_id of this DustApi.
+        """Gets the height_id of this AveragePMAPI.
 
 
-        :return: The height_id of this DustApi.
+        :return: The height_id of this AveragePMAPI.
         :rtype: int
         """
         return self._height_id
 
     @height_id.setter
     def height_id(self, height_id: int):
-        """Sets the height_id of this DustApi.
+        """Sets the height_id of this AveragePMAPI.
 
 
-        :param height_id: The height_id of this DustApi.
+        :param height_id: The height_id of this AveragePMAPI.
         :type height_id: int
         """
 
@@ -78,20 +78,20 @@ class DustApi(Model):
 
     @property
     def name(self) -> str:
-        """Gets the name of this DustApi.
+        """Gets the name of this AveragePMAPI.
 
 
-        :return: The name of this DustApi.
+        :return: The name of this AveragePMAPI.
         :rtype: str
         """
         return self._name
 
     @name.setter
     def name(self, name: str):
-        """Sets the name of this DustApi.
+        """Sets the name of this AveragePMAPI.
 
 
-        :param name: The name of this DustApi.
+        :param name: The name of this AveragePMAPI.
         :type name: str
         """
 
@@ -99,20 +99,20 @@ class DustApi(Model):
 
     @property
     def pm10(self) -> float:
-        """Gets the pm10 of this DustApi.
+        """Gets the pm10 of this AveragePMAPI.
 
 
-        :return: The pm10 of this DustApi.
+        :return: The pm10 of this AveragePMAPI.
         :rtype: float
         """
         return self._pm10
 
     @pm10.setter
     def pm10(self, pm10: float):
-        """Sets the pm10 of this DustApi.
+        """Sets the pm10 of this AveragePMAPI.
 
 
-        :param pm10: The pm10 of this DustApi.
+        :param pm10: The pm10 of this AveragePMAPI.
         :type pm10: float
         """
 
@@ -120,20 +120,20 @@ class DustApi(Model):
 
     @property
     def pm25(self) -> float:
-        """Gets the pm25 of this DustApi.
+        """Gets the pm25 of this AveragePMAPI.
 
 
-        :return: The pm25 of this DustApi.
+        :return: The pm25 of this AveragePMAPI.
         :rtype: float
         """
         return self._pm25
 
     @pm25.setter
     def pm25(self, pm25: float):
-        """Sets the pm25 of this DustApi.
+        """Sets the pm25 of this AveragePMAPI.
 
 
-        :param pm25: The pm25 of this DustApi.
+        :param pm25: The pm25 of this AveragePMAPI.
         :type pm25: float
         """
 
