# stub/swagger_server/models/mq2.py
@@ -1,88 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class MQ2(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, height_id: int=None, smoke: float=None):  # noqa: E501
-        """MQ2 - a model defined in Swagger
-
-        :param height_id: The height_id of this MQ2.  # noqa: E501
-        :type height_id: int
-        :param smoke: The smoke of this MQ2.  # noqa: E501
-        :type smoke: float
-        """
-        self.swagger_types = {
-            'height_id': int,
-            'smoke': float
-        }
-
-        self.attribute_map = {
-            'height_id': 'heightId',
-            'smoke': 'smoke'
-        }
-        self._height_id = height_id
-        self._smoke = smoke
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'MQ2':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The MQ2 of this MQ2.  # noqa: E501
-        :rtype: MQ2
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def height_id(self) -> int:
-        """Gets the height_id of this MQ2.
-
-
-        :return: The height_id of this MQ2.
-        :rtype: int
-        """
-        return self._height_id
-
-    @height_id.setter
-    def height_id(self, height_id: int):
-        """Sets the height_id of this MQ2.
-
-
-        :param height_id: The height_id of this MQ2.
-        :type height_id: int
-        """
-
-        self._height_id = height_id
-
-    @property
-    def smoke(self) -> float:
-        """Gets the smoke of this MQ2.
-
-
-        :return: The smoke of this MQ2.
-        :rtype: float
-        """
-        return self._smoke
-
-    @smoke.setter
-    def smoke(self, smoke: float):
-        """Sets the smoke of this MQ2.
-
-
-        :param smoke: The smoke of this MQ2.
-        :type smoke: float
-        """
-
-        self._smoke = smoke
