# stub/swagger_server/models/pmapi.py
@@ -9,21 +9,21 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class AverageDustApi(Model):
+class PMAPI(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, height_id: int=None, name: str=None, pm10: float=None, pm25: float=None):  # noqa: E501
-        """AverageDustApi - a model defined in Swagger
+        """PMAPI - a model defined in Swagger
 
-        :param height_id: The height_id of this AverageDustApi.  # noqa: E501
+        :param height_id: The height_id of this PMAPI.  # noqa: E501
         :type height_id: int
-        :param name: The name of this AverageDustApi.  # noqa: E501
+        :param name: The name of this PMAPI.  # noqa: E501
         :type name: str
-        :param pm10: The pm10 of this AverageDustApi.  # noqa: E501
+        :param pm10: The pm10 of this PMAPI.  # noqa: E501
         :type pm10: float
-        :param pm25: The pm25 of this AverageDustApi.  # noqa: E501
+        :param pm25: The pm25 of this PMAPI.  # noqa: E501
         :type pm25: float
         """
         self.swagger_types = {
@@ -45,32 +45,32 @@ class AverageDustApi(Model):
         self._pm25 = pm25
 
     @classmethod
-    def from_dict(cls, dikt) -> 'AverageDustApi':
+    def from_dict(cls, dikt) -> 'PMAPI':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The AverageDustApi of this AverageDustApi.  # noqa: E501
-        :rtype: AverageDustApi
+        :return: The PMAPI of this PMAPI.  # noqa: E501
+        :rtype: PMAPI
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def height_id(self) -> int:
-        """Gets the height_id of this AverageDustApi.
+        """Gets the height_id of this PMAPI.
 
 
-        :return: The height_id of this AverageDustApi.
+        :return: The height_id of this PMAPI.
         :rtype: int
         """
         return self._height_id
 
     @height_id.setter
     def height_id(self, height_id: int):
-        """Sets the height_id of this AverageDustApi.
+        """Sets the height_id of this PMAPI.
 
 
-        :param height_id: The height_id of this AverageDustApi.
+        :param height_id: The height_id of this PMAPI.
         :type height_id: int
         """
 
@@ -78,20 +78,20 @@ class AverageDustApi(Model):
 
     @property
     def name(self) -> str:
-        """Gets the name of this AverageDustApi.
+        """Gets the name of this PMAPI.
 
 
-        :return: The name of this AverageDustApi.
+        :return: The name of this PMAPI.
         :rtype: str
         """
         return self._name
 
     @name.setter
     def name(self, name: str):
-        """Sets the name of this AverageDustApi.
+        """Sets the name of this PMAPI.
 
 
-        :param name: The name of this AverageDustApi.
+        :param name: The name of this PMAPI.
         :type name: str
         """
 
@@ -99,20 +99,20 @@ class AverageDustApi(Model):
 
     @property
     def pm10(self) -> float:
-        """Gets the pm10 of this AverageDustApi.
+        """Gets the pm10 of this PMAPI.
 
 
-        :return: The pm10 of this AverageDustApi.
+        :return: The pm10 of this PMAPI.
         :rtype: float
         """
         return self._pm10
 
     @pm10.setter
     def pm10(self, pm10: float):
-        """Sets the pm10 of this AverageDustApi.
+        """Sets the pm10 of this PMAPI.
 
 
-        :param pm10: The pm10 of this AverageDustApi.
+        :param pm10: The pm10 of this PMAPI.
         :type pm10: float
         """
 
@@ -120,20 +120,20 @@ class AverageDustApi(Model):
 
     @property
     def pm25(self) -> float:
-        """Gets the pm25 of this AverageDustApi.
+        """Gets the pm25 of this PMAPI.
 
 
-        :return: The pm25 of this AverageDustApi.
+        :return: The pm25 of this PMAPI.
         :rtype: float
         """
         return self._pm25
 
     @pm25.setter
     def pm25(self, pm25: float):
-        """Sets the pm25 of this AverageDustApi.
+        """Sets the pm25 of this PMAPI.
 
 
-        :param pm25: The pm25 of this AverageDustApi.
+        :param pm25: The pm25 of this PMAPI.
         :type pm25: float
         """
 
